--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Times New Roman', Times, serif;
+    line-height: 135%;
 }
 
 .no-select, br {
@@ -12,77 +12,86 @@
     cursor: default;
 }
 
-h1, h2, h3, a, .sans-serif {
-    font-family: 'Neue Haas Grotesk Text Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+h1, h2, h3, h4, h5, h6, p, a, ul, ol, li {
+    margin: clamp(0.25vw, 0.5rem, 2vw) 0;
 }
 
-h1, h2, h3 {
-    font-weight: bold;
+h2, h3 {
+    margin-top: clamp(1vw, 2rem, 8vw);
 }
 
-h4, h5, h6 {
-    font-weight: 600;
+.text-display, h1 {
+    font-size: clamp(1.372vw, 2.744rem, 10.976vw);
 }
 
-.monospace {
-    font-family: 'Cascadia Code', Consolas, 'DejaVu Sans Mono', Menlo, Monaco, monospace;
+.text-subdisplay, h2, h3 {
+    font-size: clamp(0.86vw, 1.96rem, 7.84vw);
 }
 
-p {
-    text-align: justify;
-    text-justify: inter-word;
-    hyphens: auto;
+body, .text-body {
+    font-size: clamp(0.7vw, 1.4rem, 5.6vw);
 }
 
-html, body {
-    font-size: max(calc(2.5 * max(1vh, 1vh)), 1em);
+.text-micro {
+    font-size: clamp(0.5vw, 1rem, 4vw);
+}
+
+h1, h2, h3, a, button, .sans-serif, .text-display, .text-subdisplay, .text-micro {
+    font-family: rosario, -apple-system, Roboto, 'Segoe UI', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6, .text-display {
+    font-weight: 700;
+}
+
+html, body, .text-body {
     font-weight: 400;
-    background: #f0f0f0;
+    font-family: adobe-garamond-pro, 'Times New Roman', Times, serif;
 }
 
-body {
-    width: min(80vw, 8.5in);
-    margin: 0.75em auto;
-    background-color: white;
-    padding: 0.25em 1.25em 0.25em 1.25em;
-    border-radius: 0.4em;
+.text-micro {
+    font-weight: 400;
 }
 
-#footer {
-    font-size: 0.75em;
-    display: table;
-    text-align: center;
-    color: #6a6a6a;
-
-    margin: 1em auto 0.5em auto;
-    width: 100%;
+input, .monospace {
+    font-family: calling-code, 'Cascadia Code', Consolas, 'DejaVu Sans Mono', Menlo, Monaco, monospace;
 }
 
 .italic {
     font-style: italic;
 }
 
-h1 {
-    font-size: max(1em, calc(5 * max(1vh, 1vh)));
-    font-weight: 600;
-    margin-top: 0;
-    padding-top: 0;
+html, body {
+    font-weight: 400;
+    background: white;
+
+    margin: 0;
+    padding: 0;
 }
 
-h2 {
-    font-size: max(1em, calc(3.5 * max(1vh, 1vh)));
-    font-weight: 600;
-    margin-top: 0.9em;
-    padding-top: 0;
+#main {
+    width: clamp(40vw, 40rem, 90vw);
+    margin: 0.75em auto;
+    padding: 0.25em;
 }
 
-h1, h2 {
-    margin-bottom: 0.35em;
+#footer {
+    display: table;
+    text-align: center;
+    color: #6a6a6a;
+
+    margin: 1em auto 0.5em auto;
+    width: 100%;
+
+    border: solid #6a6a6a;
+    border-width: 1px 0 0 0;
+    padding-top: clamp(0.25vw, 0.5rem, 2vw);
 }
 
 p {
-    margin-top: 0.25em;
-    margin-bottom: 0.25em;
+    text-align: justify;
+    text-justify: inter-word;
+    hyphens: auto;
 }
 
 a {
@@ -93,4 +102,20 @@ a {
 ul, ol {
     margin: 0.3em 1em;
     padding: 0;
+}
+
+h1 {
+    font-weight: 600;
+    padding-top: 0;
+}
+
+h2 {
+    font-weight: 600;
+    padding-top: 0;
+}
+
+button {
+    font-size: max(1em, calc(2.5 * max(1vh, 1vh)));
+    cursor: pointer;
+    padding: 0.2em 0.25em 0.1em 0.25em;
 }
