Add basin coding

--- a/style.css
+++ b/style.css
@@ -119,3 +119,16 @@ button {
     cursor: pointer;
     padding: 0.2em 0.25em 0.1em 0.25em;
 }
+
+textarea {
+    font-size: max(0.7em, calc(1.75 * max(1vh, 1vh)));
+    cursor: text;
+    padding: 0.4em 0.4em 0.3em 0.4em;
+    margin: 0.1em;
+    width: 90%;
+    resize: vertical;
+
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    hyphens: none;
+}
