--- a/misc/hdr/style.css
+++ b/misc/hdr/style.css
@@ -1,11 +1,9 @@
 #hdr-overlay {
-    position: absolute;
-    left: 25vw;
-    top: 50vh;
-    width: 50vw;
-    height: 50vh;
-    padding: 0;
-    z-index: -1000000;
+    position: relative;
+    height: 20em;
+    width: 100%;
+    margin: 1em 0;
+    border-radius: 1em;
 }
 
 #hdr-overlay > video {
@@ -14,24 +12,26 @@
     top: 0;
     width: 100%;
     height: 100%;
-    margin: 0;
     object-fit: fill;
+    z-index: -1000000;
+    border-radius: 1em;
 }
 
-#hues-srgb {
-    position: absolute;
-    left: 30vw;
-    top: calc(45vh - 1 / 6 * 40vw);
-    width: 40vw;
-    height: calc(1 / 6 * 40vw);
+#brightness-test {
+    display: flex;
+    margin: 0 auto;
+    width: 80%;
+    height: 50%;
+    background-color: white;
+    border-radius: 0 0 1em 1em;
 }
 
-#hues-display-p3 {
-    position: absolute;
-    left: 30vw;
-    top: 55vh;
-    width: 40vw;
-    height: calc(1 / 6 * 40vw);
+#centered-div {
+    margin: auto;
+}
+
+#brightness-test-message {
+    margin: 1em;
 }
 
 body * {
@@ -44,4 +44,8 @@ a {
 
 html {
     font-size: 0.75em;
+}
+
+input[type="range"] {
+    width: 50%;
 }
